<resources>
    <string name="app_name">LF来了</string>
    <string name="lf_home">主页</string>
    <string name="lf_diaries">LF日记</string>
    <string name="lf_comrades">LF战友</string>
    <string name="lf_house">LF之家</string>
    <string name="my_list">LF榜</string>
    <string name="input_phone">请输入您的手机号</string>
    <string name="input_pwd">请输入您的密码</string>
    <string name="become_lf">成为LF</string>
    <string name="chus_num_lf">选择LF号</string>
    <string name="my_skills">我的技能</string>
    <string name="my_faction">我的LF帮</string>
    <string name="my_factions">我的帮派</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="third_party_login">第三方登录</string>
    <string name="input_code">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="get_code">获取验证码</string>
    <string name="input_again_pwd">请再次输入密码</string>
    <string name="again_shure">再次确认</string>
    <string name="setting_pwd">设置密码</string>
    <string name="shure">确认</string>
    <string name="real_name">实名认证</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="like">爱好</string>
    <string name="benling">本领</string>
    <string name="id">身份证</string>
    <string name="adress">地址</string>
    <string name="share">分享</string>
    <string name="share_contents">来自 LF来了 的分享：%1$s %2$s</string>

    <string name="input_adress">请输入有效的地址</string>
    <string name="phone">手机</string>
    <string name="pwd_setting">密码设置</string>
    <string name="data_audit_pass">资料审核通过</string>
    <string name="data_audit_nopass">资料未核通过</string>
    <string name="choosing_num">请珍惜唯一的LF号</string>
    <string name="choosing_btn_comit_num">确认号码</string>

    <string name="input_two_ten_num">2-10个汉字</string>
    <string name="inupt_id">请输入有效身份证号码</string>
    <string name="home_city">定位城市</string>
    <string name="beijing">北京</string>
    <string name="china">全国</string>
    <string name="must_help">紧急帮助</string>
    <string name="home_help">水龙头坏了！急需帮助！</string>
    <string name="student_lf">学习LF</string>
    <string name="lfb">LF帮</string>
    <string name="start_faction">创业帮</string>

    <string name="service_detal">活动详情</string>
    <string name="send_service">发布活动</string>
    <string name="hjlf">呼叫LF</string>
    <string name="sblf">身边LF</string>
    <string name="b">榜</string>
    <string name="lflt">LF论坛</string>
    <string name="data_auit_zjd">尊敬的</string>
    <string name="data_auit_name">XXX</string>
    <string name="data_auit_man">同志</string>
    <string name="data_auit_women">女士</string>
    <string name="data_auit_prompt">您的LF ID为</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">请稍后...</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <!--头像设置-->
    <string name="my_set_choose_operate" translatable="false">请选择操作</string>
    <string name="my_set_album" translatable="false">相册</string>
    <string name="my_set_photo" translatable="false">头像设置</string>
    <string name="my_photo" translatable="false">拍照</string>
</resources>
