<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_bnt_city"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/btnsize_10"
            android:gravity="center_vertical"
            android:background="@null"
            android:text="@string/home_city"
            android:textSize="@dimen/btnsize_20"

            />

    </LinearLayout>
    <cn.bingoogolapple.bgabanner.BGABanner
        android:id="@+id/banner_guide_content"
        style="@style/MatchMatch"
        app:banner_pageChangeDuration="1000"
        app:banner_pointAutoPlayAble="true"
        app:banner_pointAutoPlayInterval="1000"
        app:banner_indicatorGravity="bottom"
        app:banner_pointContainerBackground="@android:color/transparent"
        app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
        app:banner_pointTopBottomMargin="15dp"
        app:banner_transitionEffect="alpha" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/txt_gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnsize_10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/home_tv_student_lf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/student_lf"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/lfb"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/home_tv_hjlf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/hjlf"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnsize_10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/home_tv_sblf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/sblf"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/b"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/txtsize_20"
            android:text="@string/lflt"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            />
    </LinearLayout>


</LinearLayout>
