<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_color"
              android:orientation="vertical">


        <include layout="@layout/back_title"/>


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/real_iv_heard"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_marginTop="@dimen/btnsize_40"
            android:layout_gravity="center"
            android:layout_margin="@dimen/btnsize_20"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/btnsize_20"
            android:layout_marginRight="@dimen/btnsize_20"
            android:background="@drawable/layout_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/btnsize_10"
                android:text="@string/name"
                android:textColor="@color/black"

                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btnsize_10"
                android:layout_weight="2"
                android:background="@null"
                android:ems="10"
                android:hint="@string/input_two_ten_num"
                android:paddingLeft="@dimen/btnsize_5"
                android:singleLine="true"
                android:textColorHint="@color/text_color_qianhui"
                android:textSize="@dimen/txtsize_16"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/btnsize_20"
            android:layout_marginRight="@dimen/btnsize_20"
            android:layout_marginTop="@dimen/btnsize_14"
            android:background="@drawable/layout_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/btnsize_10"
                android:text="@string/sex"
                android:textColor="@color/black"

                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/man"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/btnsize_20"
                android:layout_weight="1"
                android:text="@string/women"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/btnsize_20"
            android:layout_marginRight="@dimen/btnsize_20"
            android:layout_marginTop="@dimen/btnsize_14"
            android:background="@drawable/layout_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/btnsize_10"
                android:text="@string/id"
                android:textColor="@color/black"

                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btnsize_10"
                android:layout_weight="2"
                android:background="@null"
                android:ems="10"
                android:hint="@string/inupt_id"
                android:paddingLeft="@dimen/btnsize_5"
                android:singleLine="true"
                android:textColorHint="@color/text_color_qianhui"
                android:textSize="@dimen/txtsize_16"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/btnsize_20"
            android:layout_marginRight="@dimen/btnsize_20"
            android:layout_marginTop="@dimen/btnsize_14"
            android:background="@drawable/layout_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/btnsize_10"
                android:text="@string/adress"
                android:textColor="@color/black"

                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btnsize_10"
                android:layout_weight="2"
                android:background="@null"
                android:ems="10"
                android:hint="@string/input_adress"
                android:paddingLeft="@dimen/btnsize_5"
                android:singleLine="true"
                android:textColorHint="@color/text_color_qianhui"
                android:textSize="@dimen/txtsize_16"/>
        </LinearLayout>



            <Button
                android:id="@+id/information_btn_comit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/btnsize_20"
                android:layout_marginRight="@dimen/btnsize_20"
                android:layout_marginTop="@dimen/btnsize_40"
                android:layout_marginBottom="@dimen/btnsize_40"
                android:background="@drawable/btn_corer_red"
                android:text="@string/next"
                android:textColor="@color/white"
                />

</LinearLayout>
