<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MVP.Home.Activity.MainActivity">
    <FrameLayout
        android:id="@+id/hometab_context"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/window_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/hometab_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/rb_recommend"
                style="@style/RadioButtonBottomTab"
                android:checked="true"
                android:drawableTop="@drawable/tab_0_back"
                android:text="@string/lf_home"
                />

            <RadioButton
                android:id="@+id/rb_stack"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_1_back"
                android:text="@string/lf_diaries"
                />

            <RadioButton
                android:id="@+id/rb_search"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_2_back"
                android:text="@string/lf_comrades"
                />

            <RadioButton
                android:id="@+id/rb_download"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_3_back"
                android:text="@string/lf_house"
                />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
