<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_color"
              android:gravity="center_vertical"
              android:orientation="vertical">

    <ImageView
        android:layout_width="167dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnsize_20"
        android:background="@drawable/layout_corner"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnsize_48"
            android:background="@null"
            android:ems="10"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:paddingLeft="@dimen/btnsize_5"
            android:singleLine="true"
            android:textColorHint="@color/txt_bgm"
            android:textSize="@dimen/txtsize_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/txt_gray"/>

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnsize_48"
            android:background="@null"
            android:ems="10"
            android:hint="@string/input_pwd"
            android:inputType="number"
            android:paddingLeft="@dimen/btnsize_5"
            android:singleLine="true"
            android:textColorHint="@color/txt_bgm"
            android:textSize="@dimen/txtsize_16"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_tv_lf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="@dimen/btnsize_40"
            android:text="@string/become_lf"
            android:textColor="@color/white"
            android:textSize="@dimen/txtsize_17"
            />

        <TextView
            android:id="@+id/login_tv_forget_pwd"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:layout_marginLeft="@dimen/btnsize_40"
            android:textColor="@color/white"
            android:textSize="@dimen/txtsize_17"
            />


    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/btnsize_20"
        android:background="@drawable/btn_corer_red"
        android:text="@string/login"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btnsize_34"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/btnsize_20"
            android:layout_weight="1"
            android:background="@color/line_bgm"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/third_party_login"
            android:textColor="@color/line_bgm"

            />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/btnsize_20"
            android:layout_weight="1"
            android:background="@color/line_bgm"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnsize_20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_iv_wechat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@mipmap/wechat"

            />

        <ImageView
            android:id="@+id/login_iv_qq"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@mipmap/qq"

            />

        <ImageView
            android:id="@+id/login_iv_weibo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@mipmap/weibo"

            />
    </LinearLayout>
</LinearLayout>
